# WCELIBCEX

./: BUILD.txt  CMakeLists.txt  README.md
cmake/: CMake_Flag_Overrides.cmake  DefaultBuildType.cmake  DefaultLibraryInstallOptions.cmake  DefaultTargetCompileOptions.cmake  NoDefaultWarningLevel.cmake  WinCeExConfig.cmake.in  arm-wec2013.cmake
inc/: fcntl.h  wce_direct.h  wce_errno.h  wce_io.h  wce_stat.h  wce_stdio.h  wce_stdlib.h  wce_string.h  wce_time.h  wce_timesys.h  wce_types.h  wce_unistd.h  wce_winbase.h
src/: wce_abort.c  wce_access.c  wce_asctime.c  wce_bsearch.c  wce_ctime.c  wce_directorymanagement.c  wce_errno.c  wce_findfile.c  wce_getenv.c  wce_getenvironmentvariable.c  wce_getopt.c  wce_gettimeofday.c  wce_localtime.c  wce_mbstowcs.c  wce_mkdir.c  wce_mktime.c  wce_path.c  wce_rename.c  wce_rewind.c  wce_rmdir.c  wce_setenvironmentvariable.c  wce_setlocale.c  wce_stat.c  wce_strerror.c  wce_time.c  wce_timesys.c  wce_unlink.c  wce_wcstombs.c  wce_winbase.c
